--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,10 @@ button {
     border-radius: 15px;
 }
 .add {
-    background-color: green;
+    background-color: rgb(61, 92, 61);
 }
 
 .delete {
-    background-color: red;
+    background-color: rgb(223, 100, 100);
 }
 
